--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "react-loading-overlay",
-  "version": "1.0.1",
+  "name": "@msweat254/react-loading-overlay",
+  "version": "2.0.0",
   "description": "Loading overlays with fade, spinner, message support.",
+  "publishConfig": {
+    "access": "public"
+  },
+  "license": "MIT",
   "keywords": [
     "react",
     "loading",
@@ -54,9 +58,9 @@
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
     "jest": "^23.6.0",
-    "react": "^16.6.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-addons-test-utils": "^15.6.2",
-    "react-dom": "^16.6.3",
     "react-testing-library": "^5.3.1",
     "regenerator-runtime": "^0.13.1",
     "rimraf": "^2.6.2",
@@ -66,8 +70,8 @@
     "webpack-cli": "^3.1.2"
   },
   "peerDependencies": {
-    "react": "^0.14 || ^15.0.0-rc || ^15.0 || ^16.0.0 || ^16.0",
-    "react-dom": "^0.14 || ^15.0.0-rc || ^15.0 || ^16.0.0 || ^16.0"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
   "standard": {
     "parser": "babel-eslint"
